@@ -29,22 +29,22 @@
   switch (borderType)
     {
       case NSNoBorder:
-	NSLog(@"No border");
+	// NSLog(@"No border");
         break;
 
       case NSLineBorder:
-	NSLog(@"Line");
+	// NSLog(@"Line");
         [color set];
         NSFrameRect(bounds);
         break;
 
       case NSBezelBorder:
-	NSLog(@"Bezel");
+	// NSLog(@"Bezel");
 	[theme drawGrayBezel: bounds withClip: rect];
         break;
 
       case NSGrooveBorder:
-	NSLog(@"Groove");
+	// NSLog(@"Groove");
         [theme drawGroove: bounds withClip: rect];
         break;
     }
