@@ -1,3 +1,9 @@
+2011-06-03 01:11-EDT Gregory John Casamento <greg.casamento@gmail.com>
+
+	* NSBrowser+Gnome.m: Draw border.
+	* NSScrollView+Gnome.m: Remove logging.
+	* NSTabView+Gnome.m: Cleanup
+
 2011-06-02 18:08-EDT Gregory John Casamento <greg.casamento@gmail.com>
 
 	* GGnomeTheme.[hm]: Remove method to draw grayBezel
